Webpack config improvements supporting url-loader

--- a/src/pages/google/css/style.scss
+++ b/src/pages/google/css/style.scss
@@ -1,6 +1,7 @@
 @import "../../../css/variables";
 @import "../../../css/main";
 @import "variables";
+@import "main";
 @import "header";
 @import "content";
-
+@import "footer";
