--- a/src/css/_main.scss
+++ b/src/css/_main.scss
@@ -1,6 +1,10 @@
+@import url(https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap);
+
 body {
   margin: 0;
-  font-family: 'arial', sans-serif;
+  font-size: 14px;
+  font-family: 'Roboto', 'arial', sans-serif;
+  color: $c_text;
 }
 
 .figure {
@@ -9,5 +13,13 @@ body {
 
 p {
   color: blue;
-  font-size: 20px;
+  font-size: 14px;
+}
+
+a {
+  text-decoration: none;
+  color: $c_black;
+  &:hover {
+    text-decoration: underline;
+  }
 }
