--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -5,6 +5,7 @@ $c_dark_gray: #2b2b2b;
 $c_light_gray: #D3D3D3;
 $c_white: #ffffff;
 $c_black: #000000;
+$c_text: lighten(#000000, 13%);
 
 // Screen breakpoints
 $screen:(
