--- a/src/pages/google/css/_header.scss
+++ b/src/pages/google/css/_header.scss
@@ -1,21 +1,63 @@
 header {
   font-size: 13px;
   grid-area: header;
-  padding: 0 25px;
+  padding: 0 18px;
   nav {
     display: flex;
     justify-content: flex-end;
-    line-height: 24px;
     align-items: center;
     height: 100%;
     gap: 15px;
     line-height: 32px;
     .nav-item {
-      height: 32px;
-      img {
-        width: 32px;
-        height: 32px;
-        border-radius: 100%;
+      height: 40px;
+      display: flex;
+      align-items: center;
+      &.nav-menu {
+        position: relative;
+        &:hover {
+          cursor: pointer;
+          &:before {
+            content: '';
+            background-color: lighten($c_gray, 70%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 100%;
+          }
+        }
+        img {
+          z-index: 1;
+          width: 24px;
+          height: 24px;
+          padding: 8px;
+          opacity: 0.6;
+        }
+      }
+      &.avatar {
+        position: relative;
+        &:hover {
+          cursor: pointer;
+          &:before {
+            content: '';
+            background-color: lighten($c_gray, 70%);
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border-radius: 100%;
+          }
+        }
+        img {
+          z-index: 1;
+          width: 32px;
+          height: 32px;
+          border-radius: 100%;
+          padding: 4px;
+        }
       }
     }
   }
