--- a/src/pages/google/css/_header.scss
+++ b/src/pages/google/css/_header.scss
@@ -13,6 +13,9 @@ header {
       height: 40px;
       display: flex;
       align-items: center;
+      a {
+        color: $c_black;
+      }
       &.nav-menu {
         position: relative;
         &:hover {
