--- a/src/css/_variables.scss
+++ b/src/css/_variables.scss
@@ -2,11 +2,13 @@
 $c_primary: #fc535a;
 $c_primary_light:#fc757a;
 $c_gray: #3c4043;
+$c_bg_gray: #f2f2f2;
 $c_dark_gray: #2b2b2b;
 $c_light_gray: #D3D3D3;
 $c_white: #ffffff;
 $c_black: #000000;
 $c_text: lighten(#000000, 13%);
+$c_link: #1a0dab;
 
 // Screen breakpoints
 $screen:(
